added serializer method to categories

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,7 +47,13 @@
   </body>
   <script src={{ url_for('static',
                  filename='node_modules/jquery/dist/jquery.min.js') }}></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script src={{ url_for('static',
+                 filename='node_modules/knockout/build/output/knockout-latest.js') }}></script>
+   <script src={{ url_for('static', filename='js/index.js') }}></script>
+   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   {% block scripts %}
+  <script type="text/javascript">
+    ko.applyBindings(new CategoryList({{ categories }}));
+  </script>
   {% endblock %}
 </html>
