--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -1,13 +1,21 @@
 {% extends "base.html" %}
 {% block mainContent %}
 <main class="row">
+  {#
+  <tbody data-bind="foreach: people">
+        <tr>
+            <td data-bind="text: firstName"></td>
+            <td data-bind="text: lastName"></td>
+        </tr>
+    </tbody>
+  #}
   <aside class="col-3 text-center">
-    <div class="list-group">
-      {% for category in categories %}
-        <a href="#" class="list-group-item list-group-item-action">
-          {{ category.name }}
+    <div class="list-group" data-bind="foreach: categories">
+        <a
+          href="#"
+          class="list-group-item list-group-item-action"
+          data-bind="text: name">
         </a>
-      {% endfor %}
     </div>
     <div class="btn-group mt-3" role="group">
       <button type="button" class="btn btn-secondary">EDIT</button>
@@ -17,4 +25,9 @@
   <div class="col-9 page">
   </div>
 </main>
+{% endblock %}
+{% block scripts %}
+  <script type="text/javascript">
+    ko.applyBindings(new CategoryList({{ categories | safe }}));
+  </script>
 {% endblock %}
