--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -10,11 +10,15 @@
     </tbody>
   #}
   <aside class="col-3 text-center">
-    <div class="list-group" data-bind="foreach: categories">
+    <div class="list-group text-left" data-bind="foreach: categories">
       <a
         href="#"
-        class="list-group-item list-group-item-action"
-        data-bind="text: name"></a>
+        class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+        <span data-bind="text: name"></span>
+        <span
+          class="badge badge-primary badge-pill"
+          data-bind="if: $parent.isEditing">DELETE</span>
+      </a>
     </div>
     <div class="btn-group mt-3" role="group">
       <button
