added transition animation to aside

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
       text-light justify-content-between">
       {% block nav %}
         <ul class="navbar-nav">
+          <li>Catalog</li>
           {% block navLinks %}
           {% endblock %}
         </ul>
