--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -13,6 +13,14 @@ ul {
   list-style-type: none;
 }
 
+.btn:focus {
+  outline: none;
+}
+
 .main-content {
   margin-top: 120px;
+}
+
+.category-list {
+  transition: all .3s ease;
 }
