added Category model class

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -49,7 +49,7 @@
               aria-label="Amount (to the nearest dollar)"
               data-bind="attr: { placeholder: name }">
             <div class="input-group-append">
-              <span class="input-group-text">Delete</span>
+              <a href="#" class="input-group-text">Delete</a>
             </div>
           </div>
         <!-- /ko -->
