--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -54,14 +54,16 @@
               <input
                 type="text"
                 class="form-control"
-                aria-label="Amount (to the nearest dollar)"
                 placeholder="i.e. Plant food">
             </div>
         </button>
       <!-- /ko -->
       <!-- ko foreach: categories -->
         <button
-          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          data-bind="
+            css: $parent.isActiveClass(id),
+            click: $parent.setActiveCategoryId(id)">
           <!-- ko ifnot: $parent.isEditing -->
             <span data-bind="text: name"></span>
           <!-- /ko -->
@@ -70,7 +72,6 @@
               <input
                 type="text"
                 class="form-control"
-                aria-label="Amount (to the nearest dollar)"
                 data-bind="attr: { placeholder: name }">
               <div class="input-group-append">
                 <a href="#" class="input-group-text">Delete</a>
