--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -11,7 +11,7 @@
   #}
 
   <aside
-    data-bind="attr: { class: isEditing() ? 'col-4 category-list' : 'col-3 category-list'}">
+    data-bind="attr: { class: isEditing() ? 'col-lg-4 category-list' : 'col-lg-3 category-list'}">
     <div class="btn-group mb-3" role="group">
       <!-- ko ifnot: isEditing -->
         <button
