--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -14,8 +14,11 @@ ul {
 }
 
 .btn:focus,
+.btn:active,
+.list-group-item:active,
 .list-group-item:focus {
   box-shadow: none;
+  outline: none;
 }
 
 .main-content {
