--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -42,7 +42,7 @@ ul {
 
 .page {
   width: 100%;
-  height: 100%;
+  height: calc(100% - 64px);
   margin-top: 55px;
   background-color: lightgray;
   border-radius: 3px;
