added conditional styles to add button

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -17,8 +17,8 @@
       </button>
       <button
         type="button"
-        class="btn btn-outline-primary"
-        data-bind="click: onAddButtonClick">
+        class="btn"
+        data-bind="css: canAdd() ? 'btn-outline-warning' : 'btn-outline-primary', click: onAddButtonClick">
         <!-- ko ifnot: canAdd -->
           New
         <!-- /ko -->
