--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -47,9 +47,11 @@ ul {
 .page {
   width: 100%;
   height: 100%;
-  margin-top: 54px;
   background-color: lightgray;
   border-radius: 3px;
   min-height: 148px;
+}
+
+.page-container {
   transition: all .3s ease;
 }
