--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block mainContent %}
-<main class="row">
+<div class="row">
   <aside
     data-bind="attr: { class: isEditing() ? 'col-lg-4 category-list' : 'col-lg-3 category-list'}">
     <div class="btn-group mb-3" role="group">
@@ -73,9 +73,17 @@
       <!-- /ko -->
     </div>
   </aside>
-  <div data-bind="attr: { class: isEditing() ? 'col-8 page' : 'col-9 page'}">
-  </div>
-</main>
+  <main data-bind="attr: { class: isEditing() ? 'col-8 page-container' : 'col-9 page-container'}">
+    <button
+      type="button"
+      class="btn btn-primary mb-3"
+      data-bind="click: onEditButtonClick">
+        Create an item
+    </button>
+    <div class="page">
+    </div>
+  </main>
+</div>
 {% endblock %}
 {% block scripts %}
   <script type="text/javascript">
