--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -28,7 +28,7 @@
         <!-- /ko -->
       </button>
     </div>
-    <div class="list-group category-list__group text-left">
+    <div class="list-group category-list__group text-left" id="category-list">
       <button
         data-bind="attr: { class : canAdd() ? 'list-group-item list-group-item-action justify-content-between align-items-center d-flex' : 'd-none' }">
           <div class="input-group">
