--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,12 +49,9 @@
       {% endblock %}
     </footer>
   </body>
-  <script src={{ url_for('static',
-                 filename='node_modules/jquery/dist/jquery.min.js') }}></script>
-  <script src={{ url_for('static',
-                 filename='node_modules/knockout/build/output/knockout-latest.js') }}></script>
    {# <script defer
      src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> #}
+   {{ javascript_tag('app_js') | safe }}
   {% block scripts %}
   {% endblock %}
 </html>
