changed vender_css to venders

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,7 +46,7 @@
    {# <script defer
      src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> #}
     {{ javascript_tag('app') | safe }}
-    {{ javascript_tag('vender_css') | safe }}
+    {{ javascript_tag('venders') | safe }}
   {% block scripts %}
   {% endblock %}
 </html>
