fixed height css on main container

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -78,7 +78,7 @@
     <div class="d-flex justify-content-end align-items-baseline">
       <button
         type="button"
-        class="btn btn-success mb-3">
+        class="btn btn-outline-success mb-3">
           New item
       </button>
     </div>
