--- a/app/templates/main.css
+++ b/app/templates/main.css
@@ -39,6 +39,7 @@ ul {
 
 .category-list__group {
   width: 100%;
+  height: calc(100% - 54px);
   min-height: 148px;
   background-color: lightgray;
   border-radius: 3px;
@@ -46,7 +47,7 @@ ul {
 
 .page {
   width: 100%;
-  height: 100%;
+  height: calc(100% - 54px);
   background-color: lightgray;
   border-radius: 3px;
   min-height: 148px;
