--- a/app/templates/item/index.html
+++ b/app/templates/item/index.html
@@ -53,7 +53,7 @@
         <input class="btn btn-primary btn-lg btn-block" type="submit" value="CREATE">
       </form>
     </div>
-    <a class="btn btn-outline-secondary btn-lg btn-block" href={{ url_for('category.allCategories', restaurant_id=restaurant.id) }}>
+    <a class="btn btn-outline-secondary btn-lg btn-block" href={{ url_for('category.allCategories') }}>
       CANCEL
     </a>
   </div>
