--- a/app/templates/item/index.html
+++ b/app/templates/item/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block mainContent %}
-{<div class="row justify-content-center">
+<div class="row justify-content-center">
   <div class="col-lg-6">
     <div class="card mb-4">
       <form class="card-body card-body-form" action={{ url_for('item.createItem',
