changed item card title

--- a/app/templates/item/index.html
+++ b/app/templates/item/index.html
@@ -5,7 +5,7 @@
     <div class="card mb-4">
       <form class="card-body card-body-form" action={{ url_for('item.createItem',
         category_id=category.id) }} enctype=multipart/form-data method="POST">
-        <h5 class="card-title">Create a new item </h5>
+        <h5 class="card-title">New item</h5>
         <h6 class="card-subtitle text-muted mb-4">for {{ category.name }}</h6>
         <div class="input-group mb-3">
           <div class="col-12 mb-3 image-upload" id="image-container">
@@ -30,30 +30,14 @@
             </span>
           </div>
         </div>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" name="price">
-          <div class="input-group-append">
-            <span class="input-group-text">
-              Price
-            </span>
-          </div>
-        </div>
         <div class="form-group mb-3">
           <label class="font-weight-bold text-muted" for="description">Description</label>
           <textarea class="form-control" name="description" id="description" rows="3"></textarea>
         </div>
-        <div class="input-group mb-4">
-          <input type="text" class="form-control" name="course">
-          <div class="input-group-append">
-            <span class="input-group-text">
-              Course
-            </span>
-          </div>
-        </div>
         <input class="btn btn-primary btn-lg btn-block" type="submit" value="CREATE">
       </form>
     </div>
-    <a class="btn btn-outline-secondary btn-lg btn-block" href={{ url_for('category.allCategories') }}>
+    <a class="btn btn-outline-secondary btn-lg btn-block mr-3 ml-3" href={{ url_for('category.allCategories') }}>
       CANCEL
     </a>
   </div>
