--- a/app/templates/main.css
+++ b/app/templates/main.css
@@ -13,12 +13,58 @@ ul {
   list-style-type: none;
 }
 
+.image-upload-container {
+  border-radius: 4px;
+  background: #757575;
+  width: 100%;
+  height: 300px;
+  width: 498px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.image-upload-container:hover {
+  cursor: pointer;
+}
+
+.image-upload-container:target {
+  content: 'test';
+}
+
+.image-upload-container:hover::after {
+  content: 'Upload image';
+  width: 75px;
+  height: 75px;
+  border: 3px solid white;
+  border-radius: 150px;
+  color: white;
+  font-weight: bold;
+  line-height: 13;
+  font-size: 16px;
+  letter-spacing: 0.1px;
+  white-space: nowrap;
+  text-indent: -19px;
+}
+
+.image-upload-container:hover::before {
+  content: '+';
+  position: absolute;
+  font-size: 27px;
+  font-weight: bold;
+  color: white;
+}
+
 .btn:focus,
 .btn:active,
 .list-group-item:active,
 .list-group-item:focus {
   box-shadow: none;
   outline: none;
+}
+
+.btn-cancel {
+  margin: 0 22px;
 }
 
 .list-group-item:hover {
