--- a/app/templates/item/index.html
+++ b/app/templates/item/index.html
@@ -12,13 +12,17 @@
       <form class="card-body card-body-form" action={{ url_for('item.createItem',
         category_id=category.id) }} enctype=multipart/form-data method="POST">
         <div class="input-group mb-3">
-          <div class="col-12 mb-3 image-upload-container" id="image-container">
-            <img src="..."
-              class="d-none img-fluid"
-              style="border-radius: 4px"
-              id="image-preview">
+          <div
+            class="col-12 mb-3 image-upload-preview"
+            id="image-upload-preview"
+            data-bind="click: openFileChooser">
           </div>
-          <input type="file" class="form-control" id="image-input" name="image">
+          <input
+            type="file"
+            class="form-control"
+            id="image-input"
+            name="image"
+            data-bind="event: { change: displayImage }">
           <div class="input-group-append">
             <span class="input-group-text">
               Image
@@ -48,21 +52,12 @@
 {% endblock %}
 {% block scripts %}
   <script type="text/javascript">
-    function readURL(input) {
-      if (input.files && input.files[0]) {
-        const reader = new FileReader();
+    (function() {
+      // set up CreateItemViewModel
+      const createItemViewModel = new CreateItemViewModel()
 
-        reader.onload = function(event) {
-          $('#image-container').css('display','block');
-          $('#image-preview').attr('src', event.target.result).removeClass('opacity-0');
-        }
-
-        reader.readAsDataURL(input.files[0]);
-      }
-    }
-
-    $('#image-input').change(function() {
-      readURL(this);
-    });
+      // applyBindings
+      ko.applyBindings(createItemViewModel)
+    })()
   </script>
 {% endblock %}
