--- a/app/templates/item/index.html
+++ b/app/templates/item/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="form-group mb-3">
           <label class="font-weight-bold text-muted" for="description">Description</label>
-          <textarea class="form-control" name="description" id="description" rows="3"></textarea>
+          <textarea class="form-control" name="details" id="description" rows="3"></textarea>
         </div>
         <input class="btn btn-primary btn-lg btn-block" type="submit" value="CREATE">
       </form>
