--- a/app/templates/item/index.html
+++ b/app/templates/item/index.html
@@ -7,7 +7,7 @@
 {% block mainContent %}
 <div class="row justify-content-center">
   <div class="col-lg-6">
-    <h5 class="text-muted text-center mb-3" >Create a new item for "{{ category.name }}"</h5>
+    <h5 class="text-muted text-center mb-3" >Create a new item in "{{ category.name }}"</h5>
     <div class="card mb-4">
       <form class="card-body card-body-form" action={{ url_for('item.createItem',
         category_id=category.id) }} enctype=multipart/form-data method="POST">
