--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -3,7 +3,8 @@
 <div class="row">
   <aside
     id='categories'
-    data-bind="attr: { class: isEditing() ? 'col-lg-4 category-list' : 'col-lg-3 category-list'}">
+    data-bind="attr: { class: isEditing() ? 'mb-5 col-lg-4 category-list' :
+    'mb-5 col-lg-3 category-list'}">
     <div class="btn-group mb-3" role="group">
       <button
         type="button"
@@ -83,8 +84,8 @@
           New item
       </button>
     </div>
-    <div class="page row pt-3 pb-3 pr-3 d-flex flex-row flex-wrap" data-bind="foreach: items">
-      <div class="col-lg-4" style="padding-right: 0">
+    <div class="page row pt-3 pr-3 d-flex flex-row flex-wrap" data-bind="foreach: items">
+      <div class="col-lg-4 mb-3" style="padding-right: 0">
         <div class="card">
           <div class="card-img-top item-card-img-top" data-bind="style: {
             'background-image': $parent.getItemImageURL(image_name),
