added catalog title

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,8 @@
           {% block navLinks %}
           {% endblock %}
         </ul>
+        <a href="{{ url_for('category.allCategories') }}" class="nav-link
+          text-white">CATALOG.IT</a>
         {#
         {% if 'username' not in session %}
         <a class="btn btn-outline-light" href={{ url_for('login.user_login') }}>
