cards are now the same height

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -85,8 +85,8 @@
       </button>
     </div>
     <div class="page row pt-3 pr-3 d-flex flex-row flex-wrap" data-bind="foreach: items">
-      <div class="col-lg-4 mb-3" style="padding-right: 0">
-        <div class="card">
+      <div class="col-lg-4 mb-3 d-flex" style="padding-right: 0">
+        <div class="card flex-fill">
           <div class="card-img-top item-card-img-top" data-bind="style: {
             'background-image': $parent.getItemImageURL(image_name),
             'background-position': 'center',
