--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
           {% endblock %}
         </ul>
         <a href="{{ url_for('category.allCategories') }}" class="nav-link
-          text-white">CATALOG.IT</a>
+          text-white">CATALOG</a>
         {#
         {% if 'username' not in session %}
         <a class="btn btn-outline-light" href={{ url_for('login.user_login') }}>
